--- a/index.html
+++ b/index.html
@@ -74,48 +74,49 @@
               product teams.
             </p>
           </div>
-          <div>
+          <div class="manage">
             <article class="manage-article">
-              <div class="manage-article-number">01</div>
-              <div>
-                <h3 class="manage-article-title">
+              <div class="manage-header">
+                <p class="manage-number">01</p>
+                <h3 class="manage-title">
                   Track company-wide progress
                 </h3>
-                <p class="manage-article-text">
-                  See how your day-to-day tasks fit into the wider vision. Go
-                  from tracking progress at the milestone level all the way
-                  done to the smallest of details. Never lose sight of the
-                  bigger picture again.
-                </p>
               </div>
+              <p class="manage-text">
+                See how your day-to-day tasks fit into the wider vision. Go
+                from tracking progress at the milestone level all the way
+                done to the smallest of details. Never lose sight of the
+                bigger picture again.
+              </p>
             </article>
 
             <article class="manage-article">
-              <div class="manage-article-number">02</div>
-              <div>
-                <h3 class="manage-article-title">
+              <div class="manage-header">
+                <p class="manage-number">02</p>
+                <h3 class="manage-title">
                   Advanced built-in reports
                 </h3>
-                <p class="manage-article-text">
-                  Set internal delivery estimates and track progress toward
-                  company goals. Our customisable dashboard helps you build
-                  out the reports you need to keep key stakeholders informed.
-                </p>
               </div>
+              <p class="manage-text">
+                Set internal delivery estimates and track progress toward
+                company goals. Our customisable dashboard helps you build
+                out the reports you need to keep key stakeholders informed.
+              </p>
+
             </article>
 
             <article class="manage-article">
-              <div class="manage-article-number">03</div>
-              <div>
-                <h3 class="manage-article-title">
+              <div class="manage-header">
+                <p class="manage-number">03</p>
+                <h3 class="manage-title">
                   Everything you need in one place
                 </h3>
-                <p class="manage-article-text">
-                  Stop jumping from one service to another to communicate,
-                  store files, track tasks and share documents. Manage offers
-                  an all-in-one team productivity solution.
-                </p>
               </div>
+              <p class="manage-text">
+                Stop jumping from one service to another to communicate,
+                store files, track tasks and share documents. Manage offers
+                an all-in-one team productivity solution.
+              </p>
             </article>
           </div>
         </div>
@@ -210,6 +211,7 @@
     </div>
   </main>
 
+  <!-- footer -->
   <footer class="footer">
     <section class="footer-container">
       <div class="footer-logos">
