fixed some missed spelling elements

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </div>
       </section>
 
-      <sectio class="grid">
+      <section class="grid">
         <div class="grid-mid">
           <div class="grid-mid-content">
             <h2 class="grid-mid-content__title">What’s different about Manage?</h2>
@@ -120,7 +120,7 @@
             </article>
           </div>
         </div>
-      </sectio>
+      </section>
 
       <!-- need to fix the layout design -->
       <section class="flex">
