done designing layout working in background-image design

--- a/index.html
+++ b/index.html
@@ -188,13 +188,25 @@
           </div>
           <form class="testimonials-form">
             <label hidden for="Anisha">Anisha Li</label>
-            <input type="radio" name="testimonial" id="Anisha" checked />
+            <label class="container-radio">
+              <input type="radio" name="testimonial" id="Anisha" checked />
+              <span class="checkmark"></span>
+            </label>
             <label hidden for="Ali">Ali Bravo</label>
-            <input type="radio" name="testimonial" id="Ali" />
+            <label class="container-radio">
+              <input type="radio" name="testimonial" id="Ali" />
+              <span class="checkmark"></span>
+            </label>
             <label hidden for="Richard">Richard Watts</label>
-            <input type="radio" name="testimonial" id="Richard" />
+            <label class="container-radio">
+              <input type="radio" name="testimonial" id="Richard" />
+              <span class="checkmark"></span>
+            </label>
             <label hidden for="Shanai">Shanai Gough</label>
-            <input type="radio" name="testimonial" id="Shanai" />
+            <label class="container-radio">
+              <input type="radio" name="testimonial" id="Shanai" />
+              <span class="checkmark"></span>
+            </label>
           </form>
         </div>
 
